# Django-SSO

./: .gitignore  .pep8  README.MD  README.md  docker-compose.yml  pyproject.toml
Service1/: Dockerfile  conftest.py  pytest.ini  requirements.txt  run.py
Service1/apps/auths/: libs.py  tests.py
Service1/apps/auths/api/: views.py
Service1/apps/grpc/: server.py
Service1/apps/grpc/management/commands/: run_grpc_server.py
Service1/apps/grpc/pbs/: user_pb2.py  user_pb2_grpc.py
Service1/apps/users/api/: views.py
Service1/settings/: settings.py
Service2/: Dockerfile  requirements.txt  run.py
Service2/apps/auths/: libs.py  urls.py
Service2/apps/auths/api/: urls.py  views.py
Service2/apps/grpc/: apps.py  client.py  server.py
Service2/apps/grpc/management/commands/: test_grpc_http.py
Service2/apps/grpc/pbs/: user_pb2.py
Service2/apps/grpc/protos/: user.proto
Service2/apps/users/: urls.py
Service2/apps/users/api/: urls.py  views.py
Service2/settings/: settings.py  urls.py
Service3/: Dockerfile  requirements.txt  run.py
Service3/apps/auths/: libs.py  urls.py
Service3/apps/users/: urls.py
Service3/apps/users/api/: urls.py  views.py
Service3/settings/: settings.py  urls.py
Service3/settings/pemkey/: id_rsa  id_rsa.pub
nginx/: nginx.conf
nginx/config/: grpc-header-config.conf
