[tool.poetry]
name = "django-test-app"
version = "0.1.0"
description = ""
authors = ["nugrahari <harin260@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.5.0"
django-redis = "^5.4.0"
cryptography = "^43.0.1"
grpcio = "^1.67.0"
grpcio-tools = "^1.67.0"
gunicorn = "^23.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
